<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="button_download">Download</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="download_using_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="download_using_loadapp">LoadApp - Current repository by Udacity</string>
    <string name="download_using_refrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="choose_file_to_download">Please select file to download.</string>
    <string name="check_status">CHECK STATUS</string>
    <string name="channel_loading_app">Loading Notification Channel</string>
    <string name="channel_description">Loading application for notification channel</string>
    <string name="text_file_name">File name: </string>
    <string name="text_status">Status: </string>
    <string name="button_ok">OK</string>

</resources>
