<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_regular"
    app:layoutDescription="@xml/detail_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerGuildLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/tvFileNameTitle"
        style="@style/LoadingApp.Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_file_name"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/centerGuildLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFileName"
        style="@style/LoadingApp.Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/centerGuildLine"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvStatusTitle"
        style="@style/LoadingApp.Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_regular"
        android:text="@string/text_status"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/centerGuildLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFileName" />

    <TextView
        android:id="@+id/tvStatus"
        style="@style/LoadingApp.Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/centerGuildLine"
        app:layout_constraintTop_toTopOf="@id/tvStatusTitle" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_ok"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>